--- a/DesktopApp/Views/OperationsPage.xaml
+++ b/DesktopApp/Views/OperationsPage.xaml
@@ -19,6 +19,7 @@
         <Grid
             Grid.Row="1" 
             Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
+            <Button Content="Button" HorizontalAlignment="Left" Height="337" Margin="343,271,0,0" VerticalAlignment="Top" Width="739" Click="Button_Click"/>
             <!--
                 The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
                 Place your content here.
