--- a/DesktopApp/Views/SettingsPage.xaml
+++ b/DesktopApp/Views/SettingsPage.xaml
@@ -6,6 +6,7 @@
     xmlns:helper="using:DesktopApp.Helpers"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Style="{StaticResource PageStyle}"
+    DataContext="{x:Bind Path=ViewModel}"
     xmlns:xaml="using:Windows.UI.Xaml"
     mc:Ignorable="d">
     <Page.Resources>
@@ -17,7 +18,14 @@
             <RowDefinition Height="48" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
+        <StackPanel Name="Top" Grid.Row="0" Width="600"  Background="Transparent" Orientation="Horizontal" CornerRadius="2">
+            <Button  Name="BackButton" Command="{Binding OnBackCommand, Mode=OneTime}" Width="50" Height="50"  Foreground="Black"  BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White">
+                <SymbolIcon Symbol="Back" />
+            </Button>
+            <Button  Name="ForwardButton" Command="{Binding OnForwardCommand, Mode=OneTime}" Width="50" Height="50"  Foreground="Black" BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White">
+                <SymbolIcon Symbol="Forward" />
+            </Button>
+        </StackPanel>
         <TextBlock
             Grid.Row="0"
             x:Uid="Settings_Title"
