--- a/DesktopApp/Views/OperationsPage.xaml
+++ b/DesktopApp/Views/OperationsPage.xaml
@@ -64,7 +64,7 @@
                     <TextBlock Height="30" Width="Auto">Remote Password :</TextBlock>
                     <TextBox Height="30" Width="Auto" Text="{Binding RemotePassword, Mode=TwoWay}" Margin="10"/>
                 </StackPanel>
-                <Button Name="ConnectButton"  Width="50" Height="50"  Foreground="Black" BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White">
+                <Button Name="ConnectButton"  Width="50" Height="50"  Foreground="Black" BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White" Click="Button_Click">
                     <SymbolIcon Symbol="Accept" />
                 </Button>
             </StackPanel>
