--- a/DesktopApp/Views/RemoteConnectionPage.xaml
+++ b/DesktopApp/Views/RemoteConnectionPage.xaml
@@ -4,25 +4,77 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Style="{StaticResource PageStyle}"
+    Background="DarkSlateGray"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    DataContext="{x:Bind ViewModel}"
     mc:Ignorable="d">
-    <Grid x:Name="ContentArea" Margin="{StaticResource MediumLeftRightMargin}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="48" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
 
-        <TextBlock
-            Grid.Row="0"
-            x:Uid="RemoteConnection_Title"
-            Style="{StaticResource PageTitleStyle}" />
-        <Grid
-            Grid.Row="1" 
-            Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
-            <!--
-                The SystemControlPageBackgroundChromeLowBrush background represents where you should place your content. 
-                Place your content here.
-            -->
+    <Grid x:Name="ContentArea">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" x:Name="Row2"/>
+        </Grid.RowDefinitions>
+        <muxc:MenuBar Grid.Row="0">
+            <muxc:MenuBarItem Title="File">
+                <MenuFlyoutItem Text="New"/>
+                <MenuFlyoutItem Text="Open..."/>
+                <MenuFlyoutItem Text="Save"/>
+                <MenuFlyoutItem Text="Exit"/>
+            </muxc:MenuBarItem>
+
+            <muxc:MenuBarItem Title="Edit">
+                <MenuFlyoutItem Text="Undo"/>
+                <MenuFlyoutItem Text="Cut"/>
+                <MenuFlyoutItem Text="Copy"/>
+                <MenuFlyoutItem Text="Paste"/>
+            </muxc:MenuBarItem>
+
+            <muxc:MenuBarItem Title="Help">
+                <MenuFlyoutItem Text="About"/>
+            </muxc:MenuBarItem>
+        </muxc:MenuBar>
+        <Grid x:Name="CenterPanel" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="2.5*" x:Name="Cp_Column2"/>
+            </Grid.ColumnDefinitions>
+
+
+            <ScrollViewer  x:Name="TexHistory" Height="{Binding ElementName=Row2, Path=ActualHeight}" Grid.Column="1" Margin="0,0,0,80" ZoomMode="Disabled" VerticalAlignment="Bottom"  IsVerticalScrollChainingEnabled="True" ManipulationCompleted="ScrollViewer_ManipulationCompleted" HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
+                <RichTextBlock VerticalAlignment="Bottom" SelectionHighlightColor="Green">
+                    <Paragraph>RichTextBlock provides a rich text display container that supports
+                        <Run  FontStyle="Italic" FontWeight="Bold">formatted text</Run> ,
+                        <Hyperlink NavigateUri="https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.Documents.Hyperlink">hyperlinks</Hyperlink> , inline images, and other rich content.
+                    </Paragraph>
+                    <Paragraph>RichTextBlock also supports a built-in overflow model.asljhdskjahdjsashdaskjdhaskjhdksadjashdskjhjdsahjksahdkjsadsahasd assada</Paragraph>
+                </RichTextBlock>
+            </ScrollViewer>
+
+            <Grid VerticalAlignment="Bottom" Name="MassengerPanel" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid Width="{Binding ElementName=Cp_Column2, Path=ActualWidth}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="10*"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Margin="2" Width="auto" Height="40">
+                        <SymbolIcon Symbol="Favorite"/>
+                    </Button>
+                    <ScrollViewer Height="auto" Grid.Column="1"  ZoomMode="Disabled" VerticalAlignment="Center"  IsVerticalScrollChainingEnabled="True" ManipulationCompleted="ScrollViewer_ManipulationCompleted" HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
+                        <RichEditBox FontSize="20" Margin="4" MinHeight="20" MaxHeight="400"  />
+                    </ScrollViewer>
+                    <Button Grid.Column="2" Margin="2" Width="auto" Height="40">
+                        <SymbolIcon Symbol="Attach"/>
+                    </Button>
+                    <Button Grid.Column="3" Margin="6" Width="auto" Height="40">
+                        <SymbolIcon Symbol="Send"/>
+                    </Button>
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
