--- a/DesktopApp/Views/RemoteConnectionPage.xaml
+++ b/DesktopApp/Views/RemoteConnectionPage.xaml
@@ -7,6 +7,7 @@
     Background="DarkSlateGray"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     DataContext="{x:Bind ViewModel}"
+    xmlns:v="using:DesktopApp.Views"
     mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
@@ -38,37 +39,8 @@
                 <ColumnDefinition Width="5*"/>
                 <ColumnDefinition Width="2.5*"/>
             </Grid.ColumnDefinitions>
-
-
-            <ScrollViewer  x:Name="TexHistory" Height="{Binding ElementName=Row2, Path=ActualHeight}" Grid.Column="1"  ZoomMode="Disabled" Margin="0,0,0,60" VerticalAlignment="Bottom"  IsVerticalScrollChainingEnabled="True" ManipulationCompleted="ScrollViewer_ManipulationCompleted" HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
-                <ContentControl Content="{Binding PastInteractionStackPanel, Mode=TwoWay}" VerticalAlignment="Bottom" Height="auto" Width="auto"/>
-            </ScrollViewer>
+            <v:InteractionsPanelPage Height="{Binding ElementName=Row2,Path=ActualHeight}" VerticalAlignment="Bottom" Background="Red"   Grid.Column="1"/>
             
-            <Grid VerticalAlignment="Bottom" Name="MassengerPanel" Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="10*"/>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Margin="2" Width="auto" Height="40">
-                        <SymbolIcon Symbol="Favorite"/>
-                    </Button>
-                    <ScrollViewer Height="auto" Grid.Column="1"  ZoomMode="Disabled" VerticalAlignment="Center"  IsVerticalScrollChainingEnabled="True" ManipulationCompleted="ScrollViewer_ManipulationCompleted" HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
-                        <RichEditBox FontSize="20" Margin="4" MinHeight="20" MaxHeight="400" MinWidth="300" />
-                    </ScrollViewer>
-                    <Button Grid.Column="2" Margin="2" Width="auto" Height="40">
-                        <SymbolIcon Symbol="Attach"/>
-                    </Button>
-                    <Button Grid.Column="3" Margin="6" Width="auto" Height="40">
-                        <SymbolIcon Symbol="Send"/>
-                    </Button>
-                </Grid>
-            </Grid>
         </Grid>
     </Grid>
 </Page>
